--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
@@ -20,20 +19,22 @@
             <h2 class="card-title">Create Employee</h2>
             <div class="row">
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                  <input type="text" class="form-control" id="firstName" placeholder="First name" aria-label="First name">
                 </div>
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                  <input type="text" class="form-control" id="lastName" placeholder="Last name" aria-label="Last name">
                 </div>
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Salary" aria-label="Salary">
+                  <input type="text" class="form-control" id="salary" placeholder="Salary" aria-label="Salary">
+                </div>
+                <div class="col">
+                    <button id="add-employees-btn" class="btn">Add Employee</button>
                 </div>
             </div>
-            <button id="add-employees-btn" class="btn">Add Employee</button>
         </div>
     </div>
 
-    <div class="card">
+    <div class="card" id="employee-card">
         <div class="card-header">
          <h2>Employee Roster</h2>
         </div>
@@ -49,12 +50,13 @@
           <tbody id="employee-table">
           </tbody>
          </table>
+         <h3 id="avg-salary"></h3>
         </div>
       </div>
 
 
 
-    <script src="./assets/style.css"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
