--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="card">
         <div class="card-body">
-            <h2 class="card-title">Create Employee</h2>
+            <h2 class="card-header">Create Employee</h2>
             <div class="row">
                 <div class="col">
                   <input type="text" class="form-control" id="firstName" placeholder="First name" aria-label="First name">
