--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Employee Payroll Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -17,7 +17,7 @@
     <div class="card">
         <div class="card-body">
             <h2 class="card-header">Create Employee</h2>
-            <div class="row">
+            <div class="row" id="employee-form">
                 <div class="col">
                   <input type="text" class="form-control" id="firstName" placeholder="First name" aria-label="First name">
                 </div>
